--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -15,8 +15,20 @@ a.signbees-link {
   }
 }
 
+h2.section-heading {
+  font-size: 31px;
+  font-weight: 500;
+  color: #010101;
+}
+
+p.section-sub-heading {
+  font-size: 17px;
+  color: #515151;
+  line-height: 27.1px;
+}
+
 // Will modify later
 .theme--light.v-application {
   background: #fff !important;
-  color: #101010 !important;
+  color: #010101 !important;
 }
